<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total de quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_liter">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_liter">KMs por litro</string>
    <string name="total_expense">Gasto Total</string>
    <string name="price_total">R$ 0,00</string>
    <string name="calculate">Calcular</string>

    <string name="validation_fill_in_all_fields">Preencha todos os campos!</string>
</resources>